# ILAM-Metric-for-Indian-Languages

./: .gitignore  Makefile  README.md  hf_auth.py  pyproject.toml  requirements-dev.txt  requirements-transfer.txt  requirements.txt  run_all.py  setup.py
.github/workflows/: ci.yml
experiments/: correlation.py  run_baselines.py  run_ilam.py
ilam/: __init__.py  hf_auth.py  metric.py  morph_score.py  script_score.py  sem_score.py
paper/: ilam_ieee.tex  refs.bib
scripts/: rotate_hf_token.sh  set_hf_token.sh
tests/: test_ilam.py
transfer/: __init__.py  translate.py
